Resolved issue with background colors on small browsers. Closes #2

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ Author URI: http://www.journalism.cuny.edu
 Tags: buddypress
 */
 
+html, body {
+	width: 100%;
+	height: 100%;
+}
 
 body {
 	background: #eee; 
@@ -165,15 +169,17 @@ input.button.primary {
 #tile-orange {
 	height: 7px;
 	background: url(images/tile-orange.jpg) repeat-x;
+	min-width: 900px;
+}
+
+#global {
+	padding: 0;
+	min-width: 900px;
+	background: #222;
 }
 	
 #global #logo img {
 	float: left;
-}
-	
-#global {
-	padding: 0 20px 0 20px; 
-	background: #222;
 }
 	
 #global a {
@@ -187,14 +193,14 @@ input.button.primary {
 #global a.olink, #global a:visited.olink {
 	color: #ff9900; }
 	
-#logo {
+#global #logo {
 	padding-top: 30px;
 	float: left;
 	width: 375px;
 	padding-bottom: 15px;
 }
 
-#logo.minimal {
+#global #logo.minimal {
 	padding-top: 15px;
 }
 	
@@ -334,8 +340,9 @@ input.button.primary {
 	
 #primary_nav {
 	height: 50px;
-	background: #1b1b1b;
+	background-color: #1b1b1b;
 	font-size: 11px;
+	min-width: 900px;
 }
 
 #primary_nav li {
